split code into multiple files

--- a/color.html
+++ b/color.html
@@ -1,4 +1,7 @@
+<script src="init.js"></script>
+<script src="main.js"></script>
+<script src="gfx.js"></script>
+<script src="keyb.js"></script>
+<script src="edit.js"></script>
 <script src="icons.js"></script>
-<script src="forth.js"></script>
-<script src="color.js"></script>
 <canvas id="canvas" width="1024" height="768" tabindex="1" style="image-rendering: pixelated"></canvas>
