add storage functionality

--- a/color.html
+++ b/color.html
@@ -3,5 +3,6 @@
 <script src="gfx.js"></script>
 <script src="keyb.js"></script>
 <script src="edit.js"></script>
+<script src="storage.js"></script>
 <script src="icons.js"></script>
 <canvas id="canvas" width="1024" height="768" tabindex="1" style="image-rendering: pixelated"></canvas>
